# TPSL_Planner

./: .gitignore  LICENSE  README.md  README_ORG.md  build_tpsl.bat  clean_caches.py  launch_tpsl.bat  pyproject.toml  requirements.txt  tpsl_planner.spec.py
notion_widgets/: Dow.html  Nasdaq.html  Nk.html  btcusd.html  qqq.html  spy.html  vix.html
tpsl_planner/: __init__.py  __main__.py  version.py
tpsl_planner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tpsl_planner/app/: dynamic_planner_dock.py  pull_levels_window.py  run.py  widgetnew.py  widgets copy.py  widgets.py
tpsl_planner/charts/: fastchart.py  theme.py
tpsl_planner/core/: auto_plan.py  engine.py  levels.py  price.py  trend.py
tpsl_planner/core/auto_plan/: __init__.py  base.py  breakout.py  pullback.py
tpsl_planner/data/: ticker_seed.json
tpsl_planner/io/: company_lookup.py  config_loader.py  env_tools.py  notion_client.py  report.py  test_lookup.py  ticker_cache.json
tpsl_planner/plugins/: hooks.py
